# TelegramOnly

./: .dockerignore  .gitignore  ARCHITECTURE.md  DEPLOY_GUIDE.md  DOCKER.md  Dockerfile  HEADSCALE_GUIDE.md  INSTALL_VPS.md  LICENSE  POST_DEPLOY.md  README.md  REDEPLOY.md  SECURITY.md  SERVER_CLEANUP_EXTRA.md  SERVER_STATE.md  SETUP.md  VERSIONING.md  admin_cli.py  anytls_manager.py  api.py  apisb_export.py  app_keys.py  bot.py  compose.headscale.yaml  compose.yaml  config.py  encryption.py  example.env  handlers.py  headscale_manager.py  host_utils.py  hysteria2_manager.py  main.py  mtproto_manager.py  naiveproxy_manager.py  pyproject.toml  requirements.txt  security.py  storage.py  telegram_capsule_export.py  (+4 more)
dockhand/: Dockerfile  app.py
fixtures/: auto-telegram-only.apix.json  hysteria2-telegram-only.apix.json  reality-telegram-only.apix.json
schema/: apix-profile-v2.schema.json
scripts/: api_key.sh  auto_setup_vps.sh  bot_status.py  bump_version.py  change_token.sh  cleanup_server.sh  deploy_file.sh  deploy_fresh_vps.sh  deploy_to_server.sh  disable_bot.sh  docker_run.sh  install_hysteria2.sh  install_mtproto.sh  install_naiveproxy.sh  install_telegramonly_vps.sh  mtproto_sync_systemd.py  restore_bot.sh  secure_config_transfer.py  setup_vless_server.sh  show_keys.py  show_version.py  sync_xray_config.py  test_encryption.py  vless_sync.sh
scripts/firewall/: fetch_cloudflare_ips.sh  ufw_allow_cloudflare_443.sh
scripts/nginx/: install_nginx_certbot.sh  renew_ssl.sh  (+1 more)
tests/: test_api.py  test_compatibility.py  test_legacy_vless_contract.py  test_obfuscation.py
(+12 files in other folders)
